--- a/ems_vue/src/main/resources/application.properties
+++ b/ems_vue/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8989
 spring.application.name=ems
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/loginproject?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/loginproject?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:com/fanzhou/mapper/*.xml
 mybatis.type-aliases-package=com.fanzhou.entity
